<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="puzzle_types">
        <item>2x2</item>
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
        <item>6x6</item>
        <item>7x7</item>
        <item>Pyraminx</item>
        <item>Square-1</item>
        <item>Megaminx</item>
        <item>Skewb</item>
    </string-array>
    <string-array name="tool_options">
        <item>Statistics</item>
        <item>Notation Guide</item>
        <item>Cube Type Guide</item>
        <item>Settings</item>
    </string-array>

    <string-array name="type_guides">
...
