...
        android:id="@+id/stats_fragment"
        android:layout_gravity="center_horizontal"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statsListFragment"
        android:layout_gravity="center_horizontal"></FrameLayout>
</LinearLayout>

