...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="Medium Text"
        android:id="@+id/statsInfo"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal|bottom" />

</FrameLayout>
...
